# www.rust-lang.org

./: .gitattributes  .gitignore  .gitpod.yml  .stylelintignore  .stylelintrc  .travis.yml  0001-Add-some-info-about-events.patch  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Procfile  README.md  Rocket.toml  RustConfig  TRANSLATIONS.md  package-lock.json  package.json  rust-toolchain  triagebot.toml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  content_bug_report.md  content_feature_request.md  design_bug_report.md  design_feature_request.md  feature_request.md  question.md  technical_bug_report.md  technical_feature_request.md
.github/workflows/: main.yml
ci/: check-nightly-version.sh  run.sh
locales/: core.ftl
locales/bg/: 404.ftl  cli.ftl
locales/de/: 404.ftl  cli.ftl  code-of-conduct.ftl  common.ftl  community.ftl  licenses.ftl  tools.ftl
locales/en-US/: 404.ftl  cli.ftl  code-of-conduct.ftl  common.ftl  community.ftl  core.ftl  embedded.ftl  funding.ftl  governance.ftl  homepage.ftl  learn.ftl  licenses.ftl  media-guide.ftl  networking.ftl  policies.ftl  privacy.ftl  production.ftl  security.ftl  sponsors.ftl  teams.ftl  tools.ftl  wasm.ftl
locales/es/: 404.ftl  cli.ftl  code-of-conduct.ftl  common.ftl  (+16 more)
localhost/: community.html  governance.html  index.html  learn.html  policies.html  tools.html
src/: assets.rs  cache.rs  caching.rs  category.rs  fluent_wrapper.rs  fs.rs  group.rs  headers.rs  helpers.rs  i18n.rs  main.rs  production.rs  redirect.rs  render.rs  rust_version.rs  sponsors.rs  team.rs  teams.rs  utils.rs
static/: skeleton.css
templates/: 404.hbs  404.html.hbs  footer.hbs  funding.html.hbs  index.hbs  index.html.hbs  languages-dropdown.hbs  languages.hbs  layout.hbs  nav.hbs  redirect.html.hbs
tests/: well_known_security.rs
(+599 files in other folders)
