[package]
name = "www-rust-lang-org"
version = "0.1.0"
authors = ["The Rust Project Developers"]
edition = "2018"

[dependencies]
handlebars-fluent = "0.4.0"
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
serde = { version = "1.0", features = ["derive"] }
sass-rs = "0.2.1"
reqwest = { version = "0.12.12", features = ["json"] }
toml = "0.8"
serde_json = "1.0"
rust_team_data = { git = "https://github.com/rust-lang/team" }
percent-encoding = "2.1.0"

[dev-dependencies]
time = { version = "0.3.36", features = ["parsing"] }
