[package]
name = "www-rust-lang-org"
version = "0.1.0"
authors = ["The Rust Project Developers"]
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
handlebars = { version = "6", features = ["dir_source"] }
handlebars-fluent = "0.5"
serde = { version = "1.0", features = ["derive"] }
sass-rs = "0.2.1"
reqwest = { version = "0.12.15", features = ["json"] }
toml = "0.8"
serde_json = "1.0"
rust_team_data = { git = "https://github.com/rust-lang/team" }
percent-encoding = "2.1.0"

[dev-dependencies]
time = { version = "0.3.41", features = ["parsing"] }
