[package]
name = "www-rust-lang-org"
version = "0.1.0"
authors = ["The Rust Project Developers"]
edition = "2024"

[dependencies]
anyhow = "1"
handlebars = { version = "6", features = ["dir_source"] }
handlebars-fluent = "0.5"
serde = { version = "1.0", features = ["derive"] }
sass-rs = "0.2.1"
ureq = { version = "3", features = ["json"] }
toml = "0.9"
serde_json = "1.0"
rust_team_data = { git = "https://github.com/rust-lang/team" }
percent-encoding = "2.3.2"
rayon = "1"
rand = "0.9"

[dev-dependencies]
time = { version = "0.3.44", features = ["parsing"] }
